--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "now-build": "npm run build",
     "build": "webpack",
+    "start:dev": "webpack --mode 'development' && npx serve dist -s",
     "lint": "standard",
     "dev": "webpack-dev-server --history-api-fallback",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,11 +28,13 @@
     "@babel/preset-react": "^7.10.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
     "standard": "^14.3.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-pwa-manifest": "^4.2.0"
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
@@ -39,9 +42,12 @@
     "apollo-boost": "^0.4.9",
     "graphql": "^15.3.0",
     "intersection-observer": "^0.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
+    "react-toasts": "^3.0.6",
     "styled-components": "^5.2.0"
   },
   "standard": {
