changes vercel and readme

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Petgram la red social de tu mascota",
   "main": "index.js",
   "scripts": {
-    "now-build": "npm run build",
+    "vercel-build": "npm run build",
     "build": "webpack",
     "start:dev": "webpack --mode 'development' && npx serve dist -s",
     "lint": "standard",
