--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,17 @@
 {
   "version": 2,
-  "name": "petgram",
   "builds": [
-    {
-      "use": "@now/static-build",
-      "src": "package.json"
-    }
+    { "use": "@now/static-build", "src": "package.json"}
   ],
   "routes": [
     {
-      "src": "(.*).json",
-      "dest": "/$1.json"
+      "src": "(.*).js", "dest": "/$1.js"
     },
     {
-      "src": "(.*).js",
-      "dest": "/$1.js"
+      "src": "(.*).json", "dest": "/$1.json"
     },
     {
-      "src": "/./",
-      "dest": "/index.html"
+      "src": "/.*", "dest": "/index.html"
     }
   ]
 }
